fix icon alignment + vertical size

--- a/modules/titlebar/main/index.scss
+++ b/modules/titlebar/main/index.scss
@@ -48,6 +48,8 @@ body.hx-full-screen {
 
   .hx-titlebar-icon {
     transition: background 0.1s;
+    align-self: stretch;
+    display: flex;
   }
 }
 
